[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/weapons/BasicWeapon.gd" type="Script" id=1]

[node name="BasicWeapon" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
